// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TileHandler/> render with default/require d props 1`] = `
<section
  className="tile-handler "
>
  <ComposedFormField
    className=""
    data-cy="-pattern"
    onChange={[Function]}
  />
  <div
    className="tile-handler__container"
  >
    <Tile
      className=""
      data-cy="-tile-0"
      id={1}
      key="0"
      to={
        Object {
          "pathname": "/explore/1",
          "state": Object {
            "isModal": true,
          },
        }
      }
    />
    <Tile
      className="tile__add-control"
      data-cy="-add"
      to={
        Object {
          "pathname": "new",
          "state": Object {
            "isModal": true,
          },
        }
      }
    />
  </div>
</section>
`;

exports[`<TileHandler/> render with optional props [::className] as "{{className}}" 1`] = `
<section
  className="tile-handler {{className}}"
>
  <ComposedFormField
    className=""
    data-cy="-pattern"
    onChange={[Function]}
  />
  <div
    className="tile-handler__container"
  >
    <Tile
      className=""
      data-cy="-tile-0"
      id={1}
      key="0"
      to={
        Object {
          "pathname": "/explore/1",
          "state": Object {
            "isModal": true,
          },
        }
      }
    />
    <Tile
      className="tile__add-control"
      data-cy="-add"
      to={
        Object {
          "pathname": "new",
          "state": Object {
            "isModal": true,
          },
        }
      }
    />
  </div>
</section>
`;

exports[`<TileHandler/> render with optional props [::data-cy] as "{{data-cy}}" 1`] = `
<section
  className="tile-handler "
>
  <ComposedFormField
    className=""
    data-cy="{{data-cy}}-pattern"
    onChange={[Function]}
  />
  <div
    className="tile-handler__container"
  >
    <Tile
      className=""
      data-cy="{{data-cy}}-tile-0"
      id={1}
      key="0"
      to={
        Object {
          "pathname": "/explore/1",
          "state": Object {
            "isModal": true,
          },
        }
      }
    />
    <Tile
      className="tile__add-control"
      data-cy="{{data-cy}}-add"
      to={
        Object {
          "pathname": "new",
          "state": Object {
            "isModal": true,
          },
        }
      }
    />
  </div>
</section>
`;
